--- a/index.html
+++ b/index.html
@@ -8,46 +8,10 @@
   <link rel="shortcut icon"
     href="https://uploads-ssl.webflow.com/62ab45248c04b5341f877b5a/62b08dc13d41695a593651d1_crece.png" />
   <title>Formulario Constitución</title>
-  <!-- Begin Inspectlet Asynchronous Code -->
-  <script type="text/javascript">
-    (function () {
-      window.__insp = window.__insp || [];
-      __insp.push(["wid", 837283875]);
-      var ldinsp = function () {
-        if (typeof window.__inspld != "undefined") return;
-        window.__inspld = 1;
-        var insp = document.createElement("script");
-        insp.type = "text/javascript";
-        insp.async = true;
-        insp.id = "inspsync";
-        insp.src =
-          ("https:" == document.location.protocol ? "https" : "http") +
-          "://cdn.inspectlet.com/inspectlet.js?wid=837283875&r=" +
-          Math.floor(new Date().getTime() / 3600000);
-        var x = document.getElementsByTagName("script")[0];
-        x.parentNode.insertBefore(insp, x);
-      };
-      setTimeout(ldinsp, 0);
-    })();
-  </script>
-  
-  <!-- End Inspectlet Asynchronous Code -->
-  <!-- Hotjar Tracking Code for https://creceaqui.github.io/crece/ -->
-  <script>
-    (function (h, o, t, j, a, r) {
-      h.hj =
-        h.hj ||
-        function () {
-          (h.hj.q = h.hj.q || []).push(arguments);
-        };
-      h._hjSettings = { hjid: 3200868, hjsv: 6 };
-      a = o.getElementsByTagName("head")[0];
-      r = o.createElement("script");
-      r.async = 1;
-      r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
-      a.appendChild(r);
-    })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
-  </script>
+<!-- INICIO DE SCRIPTS -->
+
+
+<!-- FIN DE SCRIPTS -->
 </head>
 
 <body style="margin: 0">
