--- a/index.html
+++ b/index.html
@@ -8,10 +8,24 @@
   <link rel="shortcut icon"
     href="https://uploads-ssl.webflow.com/62ab45248c04b5341f877b5a/62b08dc13d41695a593651d1_crece.png" />
   <title>Formulario Constitución</title>
-<!-- INICIO DE SCRIPTS -->
+  <!-- INICIO DE SCRIPTS -->
+  <!-- Begin Inspectlet Asynchronous Code -->
+  <script type="text/javascript">(function () {
+      window.__insp = window.__insp || [];
+      __insp.push(['wid', 1893215180]); var ldinsp = function () { if (typeof window.__inspld != "undefined") return; window.__inspld = 1; var insp = document.createElement('script'); insp.type = 'text/javascript'; insp.async = true; insp.id = "inspsync"; insp.src = ('https:' == document.location.protocol ? 'https' : 'http') + '://cdn.inspectlet.com/inspectlet.js?wid=1893215180&r=' + Math.floor(new Date().getTime() / 3600000); var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(insp, x); };
+      setTimeout(ldinsp, 0);
+    })();</script><!-- End Inspectlet Asynchronous Code -->
 
-
-<!-- FIN DE SCRIPTS -->
+  <!-- Hotjar Tracking Code for my site -->
+  <script>    (function (h, o, t, j, a, r) {
+      h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
+      h._hjSettings = { hjid: 3205911, hjsv: 6 };
+      a = o.getElementsByTagName('head')[0];
+      r = o.createElement('script'); r.async = 1;
+      r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+      a.appendChild(r);
+    })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');</script>
+  <!-- FIN DE SCRIPTS -->
 </head>
 
 <body style="margin: 0">
@@ -968,8 +982,8 @@
               <span class="form-radio-item" style="clear:left">
                 <span class="dragger-item">
                 </span>
-                <input data-hj-allow type="radio" aria-describedby="label_3" class="form-radio validate[required]" id="input_3_0"
-                  name="q3_tipoDe"
+                <input data-hj-allow type="radio" aria-describedby="label_3" class="form-radio validate[required]"
+                  id="input_3_0" name="q3_tipoDe"
                   value="EIRL (Empresa Individual de Responsabilidad Limitada). 1 socio, donde esa única persona figura como socio y Gerente General."
                   required="" />
                 <label id="label_input_3_0" for="input_3_0"> EIRL (Empresa Individual de Responsabilidad Limitada). 1
@@ -978,8 +992,8 @@
               <span class="form-radio-item" style="clear:left">
                 <span class="dragger-item">
                 </span>
-                <input data-hj-allow type="radio" aria-describedby="label_3" class="form-radio validate[required]" id="input_3_1"
-                  name="q3_tipoDe"
+                <input data-hj-allow type="radio" aria-describedby="label_3" class="form-radio validate[required]"
+                  id="input_3_1" name="q3_tipoDe"
                   value="SAC (Sociedad anónima cerrada). 2 a 20 socios/accionistas. Estos tienen responsabilidades limitadas al valor de las acciones que poseen."
                   required="" />
                 <label id="label_input_3_1" for="input_3_1"> SAC (Sociedad anónima cerrada). 2 a 20 socios/accionistas.
@@ -988,8 +1002,8 @@
               <span class="form-radio-item" style="clear:left">
                 <span class="dragger-item">
                 </span>
-                <input data-hj-allow type="radio" aria-describedby="label_3" class="form-radio validate[required]" id="input_3_2"
-                  name="q3_tipoDe"
+                <input data-hj-allow type="radio" aria-describedby="label_3" class="form-radio validate[required]"
+                  id="input_3_2" name="q3_tipoDe"
                   value="SRL (Sociedad Comercial de Responsabilidad Limitada). 2 a 20 socios/accionistas. Estos no responden con su patrimonio, sino con el patrimonio de la empresa. Normalmente se trata de empresas familiares."
                   required="" />
                 <label id="label_input_3_2" for="input_3_2"> SRL (Sociedad Comercial de Responsabilidad Limitada). 2 a
@@ -1204,17 +1218,17 @@
               <span class="form-radio-item" style="clear:left">
                 <span class="dragger-item">
                 </span>
-                <input data-hj-allow type="radio" aria-describedby="label_197" class="form-radio validate[required]" id="input_197_0"
-                  name="q197_seleccioneDonde197" value="Acercándome a la notaria ubicada en Lince (Sin costo adicional)"
-                  required="" />
+                <input data-hj-allow type="radio" aria-describedby="label_197" class="form-radio validate[required]"
+                  id="input_197_0" name="q197_seleccioneDonde197"
+                  value="Acercándome a la notaria ubicada en Lince (Sin costo adicional)" required="" />
                 <label id="label_input_197_0" for="input_197_0"> Acercándome a la notaria ubicada en Lince (Sin costo
                   adicional) </label>
               </span>
               <span class="form-radio-item" style="clear:left">
                 <span class="dragger-item">
                 </span>
-                <input data-hj-allow type="radio" aria-describedby="label_197" class="form-radio validate[required]" id="input_197_1"
-                  name="q197_seleccioneDonde197"
+                <input data-hj-allow type="radio" aria-describedby="label_197" class="form-radio validate[required]"
+                  id="input_197_1" name="q197_seleccioneDonde197"
                   value="Firma a domicilio (Costo adicional entre S/40 y S/180 según distrito)" required="" />
                 <label id="label_input_197_1" for="input_197_1"> Firma a domicilio (Costo adicional entre S/40 y S/180
                   según distrito) </label>
@@ -1300,8 +1314,8 @@
           <label class="form-label form-label-top form-label-auto" id="label_175" for="input_175"> ¿Tienes código de
             descuento o referido? Ingrésalo aquí. </label>
           <div id="cid_175" class="form-input-wide always-hidden" data-layout="half">
-            <input data-hj-allow type="text" id="input_175" name="q175_tienesCodigo" data-type="input-textbox" class="form-textbox"
-              data-defaultvalue="" style="width:310px" size="310" value="" data-component="textbox"
+            <input data-hj-allow type="text" id="input_175" name="q175_tienesCodigo" data-type="input-textbox"
+              class="form-textbox" data-defaultvalue="" style="width:310px" size="310" value="" data-component="textbox"
               aria-labelledby="label_175" />
           </div>
         </li>
