logo crece redirect

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
             padding: 20px;
             box-sizing: border-box;
           ">
-        <img class="logo-crece"
+        <a href="https://sacaturuc.creceaqui.com.pe/" alt="pagina crece"><img class="logo-crece"
           src="https://uploads-ssl.webflow.com/62ab45248c04b5341f877b5a/6316546db91c274672f1197e_logo-dark%403x.png"
-          alt="logo crece" style="width: 65px; margin-right: 20px" />
+          alt="logo crece" style="width: 65px; margin-right: 20px" /></a>
         <img class=""
           src="https://uploads-ssl.webflow.com/62ab45248c04b5341f877b5a/63165445599b58e7f7d86b6c_bcp-lg-respaldo-long-dark%403x.png"
           alt="logo crece" style="width: 223px" />
